After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 723638 - Fix Alex Roberts' name in copyright window
Fix Alex Roberts' name in copyright window
Status: RESOLVED FIXED
Product: gedit
Classification: Applications
Component: general
git master
Other All
: Normal normal
: ---
Assigned To: Gedit maintainers
Gedit maintainers
Depends on:
Blocks:
 
 
Reported: 2014-02-04 23:04 UTC by Asheesh Laroia
Modified: 2014-02-05 22:01 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Patch to make the above change (1.22 KB, patch)
2014-02-04 23:04 UTC, Asheesh Laroia
accepted-commit_now Details | Review

Description Asheesh Laroia 2014-02-04 23:04:38 UTC
Created attachment 268109 [details] [review]
Patch to make the above change

Per the ChangeLog-20011116 file in the gedit repo, Alex Roberts' name is Alex Roberts, not Alex Robert. Sample data from that file:

1998-03-05  Alex Roberts  <robo@earthling.net>

        * Started Log

The attached patch fixes a problem where his name has been mistakenly turned into Alex Robert. It should be easy to 'git am' it; I made it against current origin/master (1eec261b41589c62eaf98be41dd3684b01dcae51).



As a side note, today is Alex Roberts' birthday. Happy birthday, mralex/robo/bse/bovinity/alex!

On a personal note, I have a lot of love and respect for the gedit project. I've been using it on and off for a decade plus; I've written plugins for it and shared them on GNOME Live; and it's the editor of choice of friends and one I recommend frequently to people.


I'm hoping this can be committed in a timely fashion. Let me know if there's any other information I can provide.
Comment 1 André Klapper 2014-02-05 15:35:06 UTC
Comment on attachment 268109 [details] [review]
Patch to make the above change

This looks trivial enough to hand out "accepted commit now", if not, gedit developers please beat me up! Asheesh, do you have commit rights?
Comment 2 Asheesh Laroia 2014-02-05 16:43:58 UTC
Thanks for the super speedy response!

Right now, I don't have commit rights in gedit.
Comment 3 Paolo Borelli 2014-02-05 22:01:11 UTC
To be honest I doubt there is any line left originally written by Alex ;)


Anyway sure, I pushed your patch