Fix Alex Roberts' name in copyright window

Per the ChangeLog-20011116 file in the gedit repo, Alex Roberts' name
is Alex Roberts, not Alex Robert. Sample data from that file:

1998-03-05  Alex Roberts  <robo@earthling.net>

        * Started Log

This patch fixes a problem where his name has been mistakenly turned
into Alex Robert.

https://bugzilla.gnome.org/show_bug.cgi?id=723638