gedit/gedit-commands-help.c
@@ -70,7 +70,7 @@ _gedit_cmd_help_about (GtkAction   *action,
 	};
 
 	static const gchar copyright[] = \
-		"Copyright \xc2\xa9 1998-2000 Evan Lawrence, Alex Robert\n"
+		"Copyright \xc2\xa9 1998-2000 Evan Lawrence, Alex Roberts\n"
 		"Copyright \xc2\xa9 2000-2002 Chema Celorio, Paolo Maggi\n"
 		"Copyright \xc2\xa9 2003-2006 Paolo Maggi\n"
 		"Copyright \xc2\xa9 2004-2011 Paolo Borelli, Jesse van den Kieboom\nSteve Fr\303\251cinaux, Ignacio Casal Quinteiro";
